# Dano

./: .gitignore  Onboard  start-dano.bat
back/: .env.example  pyproject.toml
back/agent/: package-lock.json  package.json  run_pi.mjs  tools.mjs
back/dano/: config.py
back/doc/: PROMPTS.md  REWRITE_PLAN.md
back/examples/: ruoyi_mock_server.py  ruoyi_oa.yaml
back/migrations/: 001_init_assets.sql  002_skill_lifecycle.sql  003_tenants_instances.sql  004_tenant_api_key.sql  005_workflow_asset_type.sql  006_drafts_validations.sql  007_review_runs.sql  008_failure_counts.sql  009_policy_cases_kind.sql  010_adapter.sql  011_generation_runs.sql  012_self_check_kind.sql  013_runtime_token.sql  20260626_01_option_references.sql
back/tests/: test_business_funcs.py  test_business_rules_xflow.py  test_catalog.py  test_connector_step.py  test_dialects.py  test_dsl_model.py  test_export_slug.py  test_field_metadata_purity.py  test_get_action_schema.py  test_grounding.py  test_interpreter.py  test_no_literals.py  test_option_capability_compile_guard_p0.py  test_option_capability_integrity_p0.py  test_option_capability_p0.py  test_option_capability_p1.py  test_option_capability_p1_inference.py  test_option_capability_p1_pagination.py  test_option_capability_quality_p0.py  test_option_capability_security_p0.py  test_option_query_edge_p1.py  test_option_query_gateway_review_p2.py  test_option_query_inference_p2.py  test_option_query_manifest_p1.py  test_option_query_p1.py  test_option_query_review_ir_p2.py  test_option_query_review_p2.py  test_option_query_validation_p1.py  (+31 more)
(+223 files in other folders)
