[project]
name = "dano-back"
version = "0.1.0"
description = "Dano 重写(阶段一+三):Python 主体 + pi SDK Node Sidecar"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "structlog>=24.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.7"]
page = ["playwright>=1.48"]   # 流程8 页面型 Skill(无 API):装后 `python -m playwright install chromium`

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
